--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
-## Process this file with automake to produce Makefile.in
-ACLOCAL_AMFLAGS = -I m4
+SUBDIRS = . src
 
-SUBDIRS = src
-
+CLEANFILES =
 EXTRA_DIST = autogen.sh
+INCLUDES =
+
