--- a/configure.ac
+++ b/configure.ac
@@ -1,71 +1,36 @@
-dnl =============================================================
-dnl Process this file with autoconf to produce a configure script
-dnl =============================================================
-AC_INIT([CTATools], [0.1], [knodlseder@cesr.fr])
-AC_CONFIG_SRCDIR(src/Makefile.am)
-AC_CONFIG_MACRO_DIR([m4])
+# Process this file with autoconf to produce a configure script.
 
-AM_INIT_AUTOMAKE([gnu no-dependencies])
-AM_CONFIG_HEADER([config.h])
-AM_MAINTAINER_MODE
+AC_PREREQ([2.64])
+AC_INIT([ctatools], [0.1.0], [knodlseder@cesr.fr])
+AC_CONFIG_SRCDIR([src/ctselect/ctselect.cpp])
+AC_CONFIG_HEADERS([config.h])
+AM_INIT_AUTOMAKE
 
-
-dnl ===========================
-dnl things required by automake
-dnl ===========================
-dnl AC_ARG_PROGRAM
-AC_PROG_MAKE_SET
-
-
-dnl ======================
-dnl Check for which system
-dnl ======================
-dnl AC_CANONICAL_HOST
-
-
-dnl ===================
-dnl Checks for programs
-dnl ===================
+# Checks for programs.
 AC_PROG_CXX
 AC_PROG_INSTALL
-dnl AC_PROG_RANLIB
-AC_PROG_LIBTOOL
 
+# Checks for libraries.
+if test "x$prefix" = xNONE; then
+  export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/lib/pkgconfig"
+else
+  export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$prefix/lib/pkgconfig"
+fi
+PKG_CHECK_MODULES(GammaLib, gammalib >= 0.0,,
+AC_MSG_ERROR(
+[GammaLib library not found. Consider adjusting the PKG_CONFIG_PATH 
+environment variable if you installed GammaLib in a non-standard prefix.]))
+CFLAGS="$CFLAGS $GammaLib_CFLAGS"
+CPPFLAGS="$CPPFLAGS $GammaLib_CFLAGS"
+LDFLAGS="$LDFLAGS $GammaLib_LIBS"
 
-dnl =======================
-dnl Check compiler features
-dnl =======================
-dnl AC_TYPE_SIZE_T
-dnl AC_C_CONST
-dnl AC_C_VOLATILE
-dnl AC_C_INLINE
+# Checks for header files.
 
+# Checks for typedefs, structures, and compiler characteristics.
 
-dnl =======================
-dnl Checks for header files
-dnl =======================
+# Checks for library functions.
 
-
-dnl =============================================================
-dnl Checks for typedefs, structures, and compiler characteristics
-dnl =============================================================
-
-
-dnl ============================
-dnl Checks for library functions
-dnl ============================
-
-
-dnl ===================
-dnl Checks for gammalib
-dnl ===================
-AC_SEARCH_LIBS(str, gammalib,
-    AC_DEFINE([G_GAMMALIB], [1], [Define if gammalib is available]), ,[-lm])
-
-
-dnl ======================================
-dnl Set list of output files to be creates
-dnl ======================================
-AC_OUTPUT([Makefile
-           src/Makefile
-           src/ctselect/Makefile])
+AC_CONFIG_FILES([Makefile
+                 src/Makefile
+                 src/ctselect/Makefile])
+AC_OUTPUT
