--- a/src/ctselect/Makefile.am
+++ b/src/ctselect/Makefile.am
@@ -4,15 +4,26 @@
 # we use srcdir/include for the static global include files
 # we use builddir/src for the generated include files to get found
 
+# Include directories
 INCLUDES = -I$(top_srcdir)/include \
            -I$(top_builddir)/src \
            -I$(top_srcdir)/src
 
+# Program name
 bin_PROGRAMS = ctselect
 
-ctselect_SOURCES = ctselect.cpp
+# Sources
+sources = ctselect.cpp
+
+# Program definition
+ctselect_SOURCES = main.cpp $(sources)
 ctselect_LDFLAGS = @LDFLAGS@
 ctselect_CPPFLAGS = @CPPFLAGS@
 
+# Parameter files
 pfilesdir = $(prefix)/syspfiles
 pfiles_DATA = ctselect.par
+
+# Libtool library (only needed for python bindings)
+noinst_LTLIBRARIES = libctselect.la
+libctselect_la_SOURCES = $(sources)
