--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -8,7 +8,7 @@ setup(name='@PACKAGE_NAME@',
       py_modules=['ctatools'],
       ext_modules=[Extension('_ctatools', ['ctatools_wrap.cpp'],
                              include_dirs=['@prefix@/include/gammalib', '@top_srcdir@/src/ctselect', '@top_srcdir@/src/ctbin', '@top_srcdir@/src/ctlike'],
-                             library_dirs=['@prefix@/lib'],
+                             library_dirs=['../src/.libs','@prefix@/lib'],
                              libraries=['ctatools','gamma','cfitsio'],
                              runtime_library_dirs=['@prefix@/lib'])],
      )
