--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,17 @@
+## Process this file with automake to produce Makefile.in
+
+# Include M4 macros
+ACLOCAL_AMFLAGS = -I m4
+
+# Subdirectories
 SUBDIRS = . src pyext
 
-CLEANFILES =
-EXTRA_DIST = autogen.sh
+#
 INCLUDES =
+
+#
+CLEANFILES =
+
+# Extra files to be distributed in the tar file
+EXTRA_DIST = autogen.sh
 
