--- a/src/ctselect/Makefile.am
+++ b/src/ctselect/Makefile.am
@@ -15,15 +15,15 @@ bin_PROGRAMS = ctselect
 # Sources
 sources = ctselect.cpp
 
+# Libtool library (only needed for python bindings)
+noinst_LTLIBRARIES = libctselect.la
+libctselect_la_SOURCES = $(sources)
+
 # Program definition
 ctselect_SOURCES = main.cpp $(sources)
-ctselect_LDFLAGS = @LDFLAGS@
+ctselect_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctselect_CPPFLAGS = @CPPFLAGS@
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
 pfiles_DATA = ctselect.par
-
-# Libtool library (only needed for python bindings)
-noinst_LTLIBRARIES = libctselect.la
-libctselect_la_SOURCES = $(sources)
