--- a/src/ctbin/Makefile.am
+++ b/src/ctbin/Makefile.am
@@ -15,15 +15,15 @@ bin_PROGRAMS = ctbin
 # Sources
 sources = ctbin.cpp
 
+# Libtool library (only needed for python bindings)
+noinst_LTLIBRARIES = libctbin.la
+libctbin_la_SOURCES = $(sources)
+
 # Program definition
 ctbin_SOURCES = main.cpp $(sources)
-ctbin_LDFLAGS = @LDFLAGS@
+ctbin_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctbin_CPPFLAGS = @CPPFLAGS@
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
 pfiles_DATA = ctbin.par
-
-# Libtool library (only needed for python bindings)
-noinst_LTLIBRARIES = libctbin.la
-libctbin_la_SOURCES = $(sources)
