--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 # Set sub directories
-SUBDIRS = ctselect ctbin ctlike
+SUBDIRS = ctselect ctbin ctlike ctobssim
 
 # Build libtool library for CTA tools. This is needed to provide
 # a shared library that can be loaded for python bindings. We do
@@ -10,4 +10,5 @@ lib_LTLIBRARIES = libctatools.la
 libctatools_la_SOURCES = 
 libctatools_la_LIBADD = ctbin/libctbin.la \
 		        ctselect/libctselect.la \
-                        ctlike/libctlike.la
+                        ctlike/libctlike.la \
+                        ctobssim/libctobssim.la
