--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -1,4 +1,37 @@
 from distutils.core import setup, Extension
+import glob
+import os
+
+# Set default include directories and data files
+include_dirs = ['@prefix@/include/gammalib']
+data_files   = glob.glob('@top_srcdir@/pyext/*.i')
+library_dirs = ['../src/.libs','@prefix@/lib']
+libraries    = ['ctatools','gamma','cfitsio']
+
+# Add application include files
+dirs = glob.glob('../src/ct*')
+for dir in dirs:
+	if len(dir) > 0:
+		path = os.path.abspath(dir)
+		include_dirs.append(path)
+
+# Add extra libraries
+extra_libs = ('@PYTHON_EXTRA_LIBS@').split(',')
+for extra_lib in extra_libs:
+	if len(extra_lib) > 0:
+		libraries.append(extra_lib)
+
+# Get extra library paths
+extra_lib_paths = ('@LDFLAGS@').split(' ')
+for extra_lib_path in extra_lib_paths:
+	dir = extra_lib_path.lstrip('-L')
+	if len(dir) > 0:
+		library_dirs.append(extra_lib_path.lstrip('-L'))
+print include_dirs
+print libraries
+print library_dirs
+
+# Setup
 setup(name='@PACKAGE_NAME@',
       version='@PACKAGE_VERSION@',
       description='ctatools Python binding',
@@ -7,8 +40,8 @@ setup(name='@PACKAGE_NAME@',
       url='http://gammalib.sourceforge.net/',
       py_modules=['ctatools'],
       ext_modules=[Extension('_ctatools', ['ctatools_wrap.cpp'],
-                             include_dirs=['@prefix@/include/gammalib', '@top_srcdir@/src/ctselect', '@top_srcdir@/src/ctbin', '@top_srcdir@/src/ctlike', '@top_srcdir@/src/ctobssim'],
-                             library_dirs=['../src/.libs','@prefix@/lib'],
-                             libraries=['ctatools','gamma','cfitsio'],
+                             include_dirs=include_dirs,
+                             library_dirs=library_dirs,
+                             libraries=libraries,
                              runtime_library_dirs=['@prefix@/lib'])],
      )
