--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@
 #
 # Process this file with autoconf to produce a configure script
 
-AC_INIT([ctatools], [0.1.0], [knodlseder@cesr.fr], [ctatools], [])
+AC_INIT([ctatools], [1.0.0], [knodlseder@cesr.fr], [ctatools], [])
 AC_CONFIG_SRCDIR([src/ctselect/ctselect.cpp])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS([config.h])
@@ -94,45 +94,6 @@ else
 fi
 
 
-dnl ====================
-dnl Checks for libraries
-dnl ====================
-
-# Get GammaLib configuration
-if test "x$prefix" = xNONE; then
-  export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/gamma/lib/pkgconfig"
-else
-  export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$prefix/lib/pkgconfig"
-fi
-PKG_CHECK_MODULES(GammaLib, gammalib >= 0.0,,
-                  AC_MSG_ERROR([GammaLib library not found. Consider adjusting the PKG_CONFIG_PATH 
-                                environment variable if you installed GammaLib in a non-standard prefix.]))
-CFLAGS="$CFLAGS $GammaLib_CFLAGS"
-CPPFLAGS="$CPPFLAGS $GammaLib_CFLAGS"
-LDFLAGS="$LDFLAGS $GammaLib_LIBS"
-
-# Check for GammaLib library and determine path to library
-#AC_ARG_WITH([gammalib-lib-dir],
-#            AC_HELP_STRING([--with-gammalib-lib-dir],
-#                           [GammaLib library directory [[/usr/(local/(gamma/))lib(64)]]]),
-#            [gammalib_lib_dir=$withval])
-#if test "x$gammalib_lib_dir" != "x"; then
-#  test -f $gammalib_lib_dir/libgamma.a -o -f $gammalib_lib_dir/libgamma.so -o -f $gammalib_lib_dir/libgamma.dylib && LIBDIR_GAMMALIB=$gammalib_lib_dir
-#else
-#  for i in /usr/local/gamma/lib /usr/local/gamma/lib64 /usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64 ; do
-#    test -f $i/libgamma.a -o -f $i/libgamma.so -o -f $i/libgamma.dylib && LIBDIR_GAMMALIB=$i
-#  done
-#fi
-#if test -z "$LIBDIR_GAMMALIB"; then
-#  if test "x$gammalib_lib_dir" != "x"; then
-#    AC_MSG_ERROR(Cannot find GammaLib library under $gammalib_lib_dir)
-#  else
-#    AC_MSG_ERROR(Cannot find GammaLib library. Use --with-gammalib-lib-dir= to specify non-default path.)
-#  fi
-#fi
-#AC_SUBST(LIBDIR_GAMMALIB)
-
-
 dnl ========================================================================
 dnl Checks for python binding. Python binding requires Python and either the
 dnl files gammalib_wrap.cpp and gammalib.py or SWIG to create these files.
@@ -208,6 +169,30 @@ else
 fi
 
 
+dnl ===========================
+dnl Checks for GammaLib library
+dnl ===========================
+
+# Get GammaLib configuration
+if test "x$prefix" = xNONE; then
+  export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/gamma/lib/pkgconfig"
+else
+  export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$prefix/lib/pkgconfig"
+fi
+has_gammalib="no"
+PKG_CHECK_MODULES([GammaLib], [gammalib >= 0.4.5],
+                  [has_gammalib="yes"],
+                  [AC_MSG_ERROR([GammaLib library not found])
+                   AC_MSG_ERROR([Make sure that at least version 0.4.5 of GammaLib in installed])
+                   AC_MSG_ERROR([If GammaLib is not installed in the default location, please adjust the PKG_CONFIG_PATH environment variable])])
+if test "x$has_gammalib" = "xyes"; then
+  AC_DEFINE([HAVE_LIBGAMMA], [1], [Define if gammalib is available])
+fi
+CFLAGS="$CFLAGS $GammaLib_CFLAGS"
+CPPFLAGS="$CPPFLAGS $GammaLib_CFLAGS"
+LDFLAGS="$LDFLAGS $GammaLib_LIBS"
+
+
 dnl ==================
 dnl Build static code?
 dnl ==================
@@ -251,6 +236,11 @@ dnl ===========================
 echo
 echo "  ctatools configuration summary"
 echo "  =============================="
+if test "x$has_gammalib" = "xyes"; then
+  echo "  * GammaLib support             (yes)"
+else
+  echo "  - GammaLib support             (no)    no gammalib library found"
+fi
 if test ! "$SWIG"; then
   echo "  - swig                         (no)"
 else
@@ -280,3 +270,5 @@ fi
 echo
 echo "Now type 'make'"
 echo
+
+
