--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -28,9 +28,14 @@ for extra_lib_path in extra_lib_paths:
 		dir = extra_lib_path.lstrip().lstrip('-L')
 		if len(dir) > 0:
 			library_dirs.append(extra_lib_path.lstrip('-L'))
-#print include_dirs
-#print libraries
-#print library_dirs
+
+# Get extra include directories
+extra_include_dirs = ('@CPPFLAGS@').split(' ')
+for extra_include_dir in extra_include_dirs:
+	if extra_include_dir.lstrip().find('-I') == 0:
+		dir = extra_include_dir.lstrip().lstrip('-I')
+		if len(dir) > 0:
+			include_dirs.append(extra_include_dir.lstrip('-I'))
 
 # Setup
 setup(name='@PACKAGE_NAME@',
