update TESTS_ENVIRONMENT to include binary and GammaLib directories

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -22,7 +22,8 @@ INCLUDES = -I$(top_srcdir)/include \
 check_PROGRAMS = 
 
 # Set test environment
-TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(top_builddir)/src/.libs:$(LD_LIBRARY_PATH) \
+TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(top_builddir)/src/.libs:$(prefix)/lib:$(LD_LIBRARY_PATH) \
+                    PATH=$(top_builddir)/src/ctobssim:$(top_builddir)/src/ctbin:$(top_builddir)/src/ctselect:$(top_builddir)/src/ctlike:$(PATH) \
                     $(TEST_PYTHON_ENV)
 
 # Tests (these are the tests to be executed)
