remove cfitsio dependency and update for ctatools 0.2.1

--- a/ctatools.pc.in
+++ b/ctatools.pc.in
@@ -5,6 +5,11 @@ includedir=${prefix}/include
 
 Name: ctatools
 Description: CTA science analysis tools
-Version: 0.2.0
-Libs: -L${libdir} -lctatools @LIBS@
+URL: http://cta.irap.omp.eu/ctatools
+Version: 0.2.1
+Requires: 
+Requires.private: GammaLib >= 0.4.7
+Conflicts: 
 Cflags: -I${includedir}/ctatools
+Libs: -L${libdir} -lctatools
+Libs.private: 
